--- a/solution/0001.Two-Sum.md
+++ b/solution/0001.Two-Sum.md
@@ -6,15 +6,14 @@
 * 题目链接：[English](https://leetcode.com/problems/two-sum/)/[中文](https://leetcode-cn.com/problems/two-sum/)
 * Tag：`Array` `Hash Table`  
 ## 题目描述
-### English
-#### 但是 
+### English 
 Given an array of integers, return indices of the two numbers such that they add up to a specific target.   
 You may assume that each input would have exactly one solution, and you may not use the same element twice.    
-‘Given nums = [2, 7, 11, 15], target = 9,
+Example:   
+Given nums = [2, 7, 11, 15], target = 9,
 
 Because nums[0] + nums[1] = 2 + 7 = 9,
-return [0, 1].’
-
+return [0, 1].
 
 
 ## 参考答案
