--- a/solution/1315.Sum-of-Nodes-with-Even-Valued-Grandparent.md
+++ b/solution/1315.Sum-of-Nodes-with-Even-Valued-Grandparent.md
@@ -9,7 +9,9 @@
 Given a binary tree, return the sum of values of nodes with even-valued grandparent.  (A grandparent of a node is the parent of its parent, if it exists.)   
 If there are no nodes with an even-valued grandparent, return 0.
 
-Example1:
+
+Example1:  
+![Image text](https://raw.githubusercontent.com/Ryuui-tkb/LeetCode/master/img/1315_ex1.png)  
 
 Input: root = [6,7,8,2,7,1,3,9,null,1,4,null,null,null,5]   
 Output: 18   
