--- a/solution/1315.Sum-of-Nodes-with-Even-Valued-Grandparent.md
+++ b/solution/1315.Sum-of-Nodes-with-Even-Valued-Grandparent.md
@@ -18,87 +18,101 @@ Output: 18
 Explanation: The red nodes are the nodes with even-value grandparent while the blue nodes are the even-value grandparents.
 
 
-**以下为模版
+## 参考答案   
 
-## 参考答案
 
-### 1. 二进制方案
+### 1. 宽度优先搜索(BFS)
 
 #### 分析
 
-集合：和为n的可选数据集，在本题中就是可选的硬币面值：1，1，2，2，4… 以下统一称为**集合**
-
-1. 由集合中元素的特点可以联想到 **二进制**。如果将集合中的所有元素都用二进制来表示的话：
-
-   1 等于 2的0次方 等于 二进制的 1 
-   2 等于 2的1次方 等于 二进制的 10
-   4 等于 2的2次方 等于 二进制的 100
-   ...
-   即：
-   1=2^0=(1)2; 2=2^1=(10)2; 4 = 2^2 = (100)2;..... .**（等号最后的数都是二进制表示法）**
-
-   集合中的每一个元素都可以表示为 首位为 1 其他位为 0 的二进制数。
-
-2. 集合中元素是成对出现的，那么可以将集合拆分为完全相同的两部分, 每一个数都可以由二进制中指定位置的1 来表示：
-
-   8 4 2 1             —>     1 1 1 1
-
-   8 4 2 1             —>     1 1 1 1
-
-   那么，若目标数 n 为 11.那么  11 = 1 + 10 = 2 + 9 = 3 + 8 = 4 + 7 = 5 + 6；
-
-   **a.** 以 **1 + 10** 为例 ： 1 的 二进制  1，  10的二进制为  1010     那么 (11) 就相当于 
-
-   取 二进制数 第一位的1， 第四位的1 ，第2位的 1 [**从右往左**]
-
-    即可组成 十进制的11。
-
-   **b.** **2 + 9 = (10)2+ (1001)2** ： 取第二位的1， 第四位的1， 从第一位的1 [**从右往左**]
-
-   同理：
-
-   **c.** **3 + 8= (11)2+(1000)2**
-
-   **d.** **4 + 7 = (100)2+(111)2**
-
-   **e.** **5 + 6=(101)2+(110)2**
-
-   > a 和 b ,c 中 其实是同一种方案。可通过**异或运算**进行去重：
-   >
-   > 比如，这三组方案的异或结果是相同的。1^10 == 2^9 == 3^8 == (1011)2
-   >
-   > d,e 也是同一种方案
+这道题考察的是二叉树遍历的算法，所以各种DFS和BFS都可以求解，这里使用的是BFS的方法
 
 #### 思路
 
-1. 从i=0开始**(如果n=4 那么 0+4 也是一种方案，只不过只选择一个 4 而已)**，i<=(n/2), 每次i+1  循环开始：循环中将 i^(n-i)的值放到 Set（无重复元素）中
-2. **最终**求 Set的 size大小。就是最终的方案数。
+1.递归法
 
 代码如下：
 
-```c++
-import java.util.HashSet;
-import java.util.Set;
-
-public class CoinsOfQy {
-
-  /**测试*/
-  public static void main(String[] args) {
-
-    int n = 11;
-    int result = coinsOfQy(n);
-    System.out.println(result);
-  }
-  
-  private static int coinsOfQy(int n) {
-
-    Set<Integer> resultSet = new HashSet<>();
-    for (int i =0; i<= n/2; i++){
-      int r = i^(n-i);
-      resultSet.add(r);
+```Java
+/**
+ * Definition for a binary tree node.
+ * public class TreeNode {
+ *     int val;
+ *     TreeNode left;
+ *     TreeNode right;
+ *     TreeNode(int x) { val = x; }
+ * }
+ */
+class Solution {
+	int sum=0;
+    public int sumEvenGrandparent(TreeNode root) {
+		if(root ==null)
+			return sum;
+		helper(root,0);
+        return sum;
     }
-    return resultSet.size();
-  }
+	private void helper(TreeNode node,int flag){
+		if(flag ==1)
+		{
+			sum += (node.left ==null?0:node.left.val);
+			sum += (node.right ==null?0:node.right.val);
+		}
+		int next_flag = (node.val %2  ==0?1:0);
+		if(node.left !=null)
+			helper(node.left,next_flag);
+		if(node.right !=null)
+			helper(node.right,next_flag);
+	}
+}
+
+```
+
+
+2.迭代法
+
+代码如下：
+
+```Java
+/**
+ * Definition for a binary tree node.
+ * public class TreeNode {
+ *     int val;
+ *     TreeNode left;
+ *     TreeNode right;
+ *     TreeNode(int x) { val = x; }
+ * }
+ */
+class Solution {
+    public int sumEvenGrandparent(TreeNode root) {
+        if(root ==null)
+            return 0;
+
+        Queue<TreeNode> node_queue = new LinkedList<TreeNode>();
+        Queue<Integer> flag_queue = new LinkedList<Integer>();
+        int sum =0;
+
+        node_queue.offer(root);
+		flag_queue.offer(0);
+
+        while(node_queue.size()>0){
+            TreeNode head_node = node_queue.remove();
+            int head_flag = flag_queue.remove();
+			if(head_flag ==1){
+				sum += (head_node.left==null?0:head_node.left.val);
+				sum += (head_node.right==null?0:head_node.right.val);
+			}
+			int flag = head_node.val %2 == 0?1:0;
+            if(head_node.left !=null){
+                node_queue.offer(head_node.left);
+				flag_queue.offer(flag);
+            }
+            if(head_node.right !=null){
+                node_queue.offer(head_node.right);
+				flag_queue.offer(flag);
+            }
+        }
+        return sum;
+    }
 }
 
 ```
