--- a/solution/1315.Sum-of-Nodes-with-Even-Valued-Grandparent.md
+++ b/solution/1315.Sum-of-Nodes-with-Even-Valued-Grandparent.md
@@ -30,10 +30,13 @@ Explanation: The red nodes are the nodes with even-value grandparent while the b
 #### 思路
 
 1.递归法
+* 时间：2020-01-19
+* 题目链接：[English](https://leetcode.com/problems/sum-of-nodes-with-even-valued-grandparent/)/[中文](https://leetcode-cn.com/problems/sum-of-nodes-with-even-valued-grandparent/)
+* Tag：`Tree` `DFS` `BFS`  
 
 代码如下：
 
-```Java
+#```Java
 /**
  * Definition for a binary tree node.
  * public class TreeNode {
@@ -65,7 +68,7 @@ class Solution {
 	}
 }
 
-```
+#```
 
 
 2.迭代法
