--- a/solution/1315.Sum-of-Nodes-with-Even-Valued-Grandparent.md
+++ b/solution/1315.Sum-of-Nodes-with-Even-Valued-Grandparent.md
@@ -36,7 +36,7 @@ Explanation: The red nodes are the nodes with even-value grandparent while the b
 
 代码如下：
 
-#```Java
+```Java
 /**
  * Definition for a binary tree node.
  * public class TreeNode {
@@ -67,8 +67,7 @@ class Solution {
 			helper(node.right,next_flag);
 	}
 }
-
-#```
+```
 
 
 2.迭代法
