--- a/solution/1315.Sum-of-Nodes-with-Even-Valued-Grandparent.md
+++ b/solution/1315.Sum-of-Nodes-with-Even-Valued-Grandparent.md
@@ -30,9 +30,8 @@ Explanation: The red nodes are the nodes with even-value grandparent while the b
 #### 思路
 
 1.递归法
-* 时间：2020-01-19
-* 题目链接：[English](https://leetcode.com/problems/sum-of-nodes-with-even-valued-grandparent/)/[中文](https://leetcode-cn.com/problems/sum-of-nodes-with-even-valued-grandparent/)
-* Tag：`Tree` `DFS` `BFS`  
+* Runtime: 1 ms, faster than 100.00% of Java online submissions for Sum of Nodes with Even-Valued Grandparent.
+* Memory Usage: 51.2 MB, less than 100.00% of Java online submissions for Sum of Nodes with Even-Valued Grandparent.
 
 代码如下：
 
