--- a/solution/1315.Sum-of-Nodes-with-Even-Valued-Grandparent.md
+++ b/solution/1315.Sum-of-Nodes-with-Even-Valued-Grandparent.md
@@ -32,6 +32,7 @@ Explanation: The red nodes are the nodes with even-value grandparent while the b
 1.递归法
 
 代码如下： 
+
 * Runtime: 1 ms, faster than 100.00% of Java online submissions for Sum of Nodes with Even-Valued Grandparent.
 * Memory Usage: 51.2 MB, less than 100.00% of Java online submissions for Sum of Nodes with Even-Valued Grandparent.
 
@@ -71,7 +72,10 @@ class Solution {
 
 2.迭代法
 
-代码如下：
+代码如下：   
+
+* Runtime: 10 ms, faster than 6.47% of Java online submissions for Sum of Nodes with Even-Valued Grandparent.
+* Memory Usage: 50.7 MB, less than 100.00% of Java online submissions for Sum of Nodes with Even-Valued Grandparent.
 
 ```Java
 /**
