--- a/solution/701.Insert-into-a-Binary-Search-Tree.md
+++ b/solution/701.Insert-into-a-Binary-Search-Tree.md
@@ -53,7 +53,7 @@ This tree is also valid:
 
 ##### JAVA
 
-1.递归法
+###### 1.递归法
 
 代码如下： 
 
@@ -93,7 +93,7 @@ class Solution {
 ```
 
 
-2.迭代法
+###### 2.迭代法
 
 代码如下：   
 
