--- a/solution/701.Insert-into-a-Binary-Search-Tree.md
+++ b/solution/701.Insert-into-a-Binary-Search-Tree.md
@@ -53,13 +53,12 @@ This tree is also valid:
 
 ##### JAVA
 
-###### 1.递归法
+1.递归法
 
 代码如下： 
 
 * Runtime: 0 ms, faster than 100.00% of Java online submissions for Insert into a Binary Search Tree.
 * Memory Usage: 50.1 MB, less than 5.17% of Java online submissions for Insert into a Binary Search Tree.
-
 
 ```Java
 /**
@@ -93,7 +92,7 @@ class Solution {
 ```
 
 
-###### 2.迭代法
+2.迭代法
 
 代码如下：   
 
@@ -154,6 +153,9 @@ class Solution {
 }
 
 ```
+##### C++
+
+##### Python
 
 
 ## 优秀解答
