--- a/solution/701.Insert-into-a-Binary-Search-Tree.md
+++ b/solution/701.Insert-into-a-Binary-Search-Tree.md
@@ -60,6 +60,7 @@ This tree is also valid:
 
 ```Java
 /**
+ * @author RyuuI
  * Definition for a binary tree node.
  * public class TreeNode {
  *     int val;
@@ -97,6 +98,7 @@ class Solution {
 
 ```Java
 /**
+ * @author RyuuI
  * Definition for a binary tree node.
  * public class TreeNode {
  *     int val;
