--- a/solution/1315.Sum-of-Nodes-with-Even-Valued-Grandparent.md
+++ b/solution/1315.Sum-of-Nodes-with-Even-Valued-Grandparent.md
@@ -28,16 +28,20 @@ Explanation: The red nodes are the nodes with even-value grandparent while the b
 这道题考察的是二叉树遍历的算法，所以各种DFS和BFS都可以求解，这里使用的是BFS的方法
 
 #### 思路
+略
+
+#### 代码
+
+##### JAVA
 
 1.递归法
-
-代码如下： 
 
 * Runtime: 1 ms, faster than 100.00% of Java online submissions for Sum of Nodes with Even-Valued Grandparent.
 * Memory Usage: 51.2 MB, less than 100.00% of Java online submissions for Sum of Nodes with Even-Valued Grandparent.
 
 ```Java
 /**
+ * @author RyuuI
  * Definition for a binary tree node.
  * public class TreeNode {
  *     int val;
@@ -70,15 +74,14 @@ class Solution {
 ```
 
 
-2.迭代法
-
-代码如下：   
+2.迭代法 
 
 * Runtime: 10 ms, faster than 6.47% of Java online submissions for Sum of Nodes with Even-Valued Grandparent.
 * Memory Usage: 50.7 MB, less than 100.00% of Java online submissions for Sum of Nodes with Even-Valued Grandparent.
 
 ```Java
 /**
+ * @author RyuuI
  * Definition for a binary tree node.
  * public class TreeNode {
  *     int val;
@@ -121,6 +124,12 @@ class Solution {
 }
 
 ```
+
+
+##### C++
+
+
+##### Python
 
 
 ## 优秀解答
