--- a/solution/2.Add-Two-Numbers.md
+++ b/solution/2.Add-Two-Numbers.md
@@ -179,7 +179,7 @@ class Solution {
 ```
 
 
-3.递归法，但是如果数据太长，可能会爆栈，实际运用中最好不使用递归法。
+3.递归法，代码量少。因为需要使用大量空间，所以在实际项目中，如果数据太长，可能会爆栈。
 
 * Runtime: 2 ms, faster than 72.01% of Java online submissions for Add Two Numbers.
 * Memory Usage: 49.8 MB, less than 5.01% of Java online submissions for Add Two Numbers.
