--- a/solution/814.Binary-Tree-Pruning.md
+++ b/solution/814.Binary-Tree-Pruning.md
@@ -1,40 +1,41 @@
-# 701.Insert into a Binary Search Tree[二叉搜索树中的插入操作]
+# 814. Binary Tree Pruning[二叉树剪枝]
 
 ## 信息卡片
 
-* 时间：2020-01-20
-* 题目链接：[English](https://leetcode.com/problems/insert-into-a-binary-search-tree/)/[中文](https://leetcode-cn.com/problems/insert-into-a-binary-search-tree/)
-* Tag：`Tree`
+* 时间：2020-01-29
+* 题目链接：[English](https://leetcode.com/problems/binary-tree-pruning/)/[中文](https://leetcode-cn.com/problems/binary-tree-pruning/)
+* Tag：`Tree` `DFS`
 ## 题目描述
-Given the root node of a binary search tree (BST) and a value to be inserted into the tree, insert the value into the BST. Return the root node of the BST after the insertion. It is guaranteed that the new value does not exist in the original BST.  
-Note that there may exist multiple valid ways for the insertion, as long as the tree remains a BST after insertion. You can return any of them.
+We are given the head node root of a binary tree, where additionally every node's value is either a 0 or a 1.   
+Return the same tree where every subtree (of the given tree) not containing a 1 has been removed.  
+(Recall that the subtree of a node X is X, plus every node that is a descendant of X.)
 
-For example, 
 
-Given the tree:  
+Example 1:  
+Input: [1,null,0,0,1]  
+Output: [1,null,0,null,1]  
+ 
+Explanation:   
+Only the red nodes satisfy the property "every subtree not containing a 1".  
+The diagram on the right represents the answer.  
+![Image text](https://raw.githubusercontent.com/Ryuui-tkb/LeetCode/master/img/814_ex1.png)   
 
-        4
-       / \
-      2   7
-     / \
-    1   3
-And the value to insert: 5
-You can return this binary search tree:
 
-         4
-       /   \
-      2     7
-     / \   /
-    1   3 5
-This tree is also valid:
+Example 2:  
+Input: [1,0,1,0,0,0,1]  
+Output: [1,null,1,null,1]  
+![Image text](https://raw.githubusercontent.com/Ryuui-tkb/LeetCode/master/img/814_ex2.png) 
 
-         5
-       /   \
-      2     7
-     / \   
-    1   3
-         \
-          4
+
+Example 3:  
+Input: [1,1,0,1,1,0,1,0]  
+Output: [1,1,0,1,1,null,1]  
+![Image text](https://raw.githubusercontent.com/Ryuui-tkb/LeetCode/master/img/814_ex3.png) 
+
+
+Note:  
+The binary tree will have at most 100 nodes.  
+The value of each node will only be 0 or 1.  
 
 
 ## 参考答案   
