--- a/solution/814.Binary-Tree-Pruning.md
+++ b/solution/814.Binary-Tree-Pruning.md
@@ -43,7 +43,7 @@ The value of each node will only be 0 or 1.
 
 #### 分析
 
-如题目所示，考察二叉搜索树的插入操作，第一时间想到的是递归法和迭代法。（想不明白为什么Memory Usage那么高..）
+如题目所示，这到底使用DFS进行遍历，要注意的问题是这道题需要实时剪枝（即把该节点置null），可以使用递归法和迭代法。  
 
 #### 思路
 略
@@ -54,8 +54,8 @@ The value of each node will only be 0 or 1.
 
 1.递归法
 
-* Runtime: 0 ms, faster than 100.00% of Java online submissions for Insert into a Binary Search Tree.
-* Memory Usage: 50.1 MB, less than 5.17% of Java online submissions for Insert into a Binary Search Tree.
+Runtime: 0 ms, faster than 100.00% of Java online submissions for Binary Tree Pruning.
+Memory Usage: 37.4 MB, less than 5.88% of Java online submissions for Binary Tree Pruning.
 
 ```Java
 /**
@@ -69,22 +69,14 @@ The value of each node will only be 0 or 1.
  * }
  */
 class Solution {
-    public TreeNode insertIntoBST(TreeNode root, int val) {
-		//终止条件即为搜索到null的节点，用于存放新的节点。
-    if(root == null)
-		{
-			root = new TreeNode(val);
-			root.left = null;
-			root.right = null;
+    public TreeNode pruneTree(TreeNode root) {
+		if(root == null)
 			return root;
-		}
-    
-		if(val <  root.val)
-			root.left = insertIntoBST(root.left,val);
-		else if(val > root.val)
-			root.right = insertIntoBST(root.right,val);
-		
-		return root; 
+		root.left = pruneTree(root.left);
+		root.right = pruneTree(root.right);
+		if(root.left==null && root.right==null && root.val==0)
+			return null;
+		return root;
     }
 }
 ```
