--- a/solution/814.Binary-Tree-Pruning.md
+++ b/solution/814.Binary-Tree-Pruning.md
@@ -72,6 +72,7 @@ class Solution {
     public TreeNode pruneTree(TreeNode root) {
 		if(root == null)
 			return root;
+		//这里要实时进行节点更新
 		root.left = pruneTree(root.left);
 		root.right = pruneTree(root.right);
 		if(root.left==null && root.right==null && root.val==0)
