--- a/solution/814.Binary-Tree-Pruning.md
+++ b/solution/814.Binary-Tree-Pruning.md
@@ -54,8 +54,8 @@ The value of each node will only be 0 or 1.
 
 1.递归法
 
-Runtime: 0 ms, faster than 100.00% of Java online submissions for Binary Tree Pruning.
-Memory Usage: 37.4 MB, less than 5.88% of Java online submissions for Binary Tree Pruning.
+* Runtime: 0 ms, faster than 100.00% of Java online submissions for Binary Tree Pruning.
+* Memory Usage: 37.4 MB, less than 5.88% of Java online submissions for Binary Tree Pruning.
 
 ```Java
 /**
@@ -85,8 +85,8 @@ class Solution {
 
 2.迭代法  
 
-* Runtime: 0 ms, faster than 100.00% of Java online submissions for Insert into a Binary Search Tree.
-* Memory Usage: 50.3 MB, less than 5.17% of Java online submissions for Insert into a Binary Search Tree.
+* Runtime: 0 ms, faster than 100.00% of Java online submissions for Binary Tree Pruning.
+* Memory Usage: 36.9 MB, less than 5.88% of Java online submissions for Binary Tree
 
 ```Java
 /**
@@ -100,48 +100,36 @@ class Solution {
  * }
  */
 class Solution {
-    public TreeNode insertIntoBST(TreeNode root, int val) {
-        if(root == null){
-            root = new TreeNode(val);
-            root.left = null;
-            root.right =null;
-            return root;
-        }
-        
-        //用于跟踪现在的位置
-        TreeNode current = root;
-        
-        //可以事先创建好新节点
-        TreeNode node = new TreeNode(val);
-        node.left= null;
-        node.right = null;
-        
-        while(true){
-            if(val < current.val)
-            {
-                if(current.left == null)
-                {
-                    current.left = node;
-                    break;
-                }    
-                else
-                    current = current.left;
-            }
-            else if(val > current.val)
-            {
-                if(current.right == null)
-                {
-                    current.right = node;
-                    break;
-                } 
-                else
-                    current = current.right;
-            }
-        }
-        return root;  
+    public TreeNode pruneTree(TreeNode root) {
+		Stack<TreeNode> stack = new Stack<TreeNode>();
+		TreeNode preNode = root;
+		stack.push(root);
+		while(stack.size()>0)
+		{
+			TreeNode top = stack.peek();
+			if(top.left !=null && top.left.val ==-1)
+				top.left =null;
+			if(top.right != null && top.right.val==-1)
+				top.right =null;
+			if((top.left ==null && top.right ==null)|| preNode ==top.left || preNode == top.right)
+			{
+				preNode = stack.pop();
+				if(top.left ==null&&top.right == null&& top.val ==0)
+					top.val =-1;
+			}
+			else
+			{
+				if(top.right != null)
+					stack.push(top.right);
+				if(top.left != null)
+					stack.push(top.left);	
+			}
+		}
+		if(root.val == -1)
+			return null;
+		return root;  
     }
 }
-
 ```
 
 ##### C++
