--- a/solution/814.Binary-Tree-Pruning.md
+++ b/solution/814.Binary-Tree-Pruning.md
@@ -107,6 +107,7 @@ class Solution {
 		while(stack.size()>0)
 		{
 			TreeNode top = stack.peek();
+			//将节点值为-1的子节点删除，即置为null
 			if(top.left !=null && top.left.val ==-1)
 				top.left =null;
 			if(top.right != null && top.right.val==-1)
@@ -114,6 +115,7 @@ class Solution {
 			if((top.left ==null && top.right ==null)|| preNode ==top.left || preNode == top.right)
 			{
 				preNode = stack.pop();
+				//当节点的子节点均为null，并且节点的值为0，则该节点需要删除，讲节点的值置为-1
 				if(top.left ==null&&top.right == null&& top.val ==0)
 					top.val =-1;
 			}
@@ -125,6 +127,7 @@ class Solution {
 					stack.push(top.left);	
 			}
 		}
+		//最后要记得判断root的值，若为-1，则需要删除
 		if(root.val == -1)
 			return null;
 		return root;  
