--- a/solution/637.Average-of-Levels-in-Binary-Tree.md
+++ b/solution/637.Average-of-Levels-in-Binary-Tree.md
@@ -27,7 +27,7 @@ The average value of nodes on level 0 is 3,  on level 1 is 14.5, and on level 2 
 
 #### 分析
 
-如题目所示，考察二叉搜索树的插入操作，第一时间想到的是递归法和迭代法。（想不明白为什么Memory Usage那么高..）
+这道题是层次遍历的算法，只要遍历每一层，并且计算其平均值即可。值得注意的是，本题的存储要考虑到int型可能发生溢出，所以应该使用long型存储和的结果。  
 
 #### 思路
 略
@@ -38,8 +38,8 @@ The average value of nodes on level 0 is 3,  on level 1 is 14.5, and on level 2 
 
 1.递归法
 
-* Runtime: 0 ms, faster than 100.00% of Java online submissions for Insert into a Binary Search Tree.
-* Memory Usage: 50.1 MB, less than 5.17% of Java online submissions for Insert into a Binary Search Tree.
+* Runtime: 2 ms, faster than 93.92% of Java online submissions for Average of Levels in Binary Tree.
+* Memory Usage: 42.9 MB, less than 8.00% of Java online submissions for Average of Levels in Binary Tree.
 
 ```Java
 /**
@@ -53,31 +53,44 @@ The average value of nodes on level 0 is 3,  on level 1 is 14.5, and on level 2 
  * }
  */
 class Solution {
-    public TreeNode insertIntoBST(TreeNode root, int val) {
-		//终止条件即为搜索到null的节点，用于存放新的节点。
-    if(root == null)
-		{
-			root = new TreeNode(val);
-			root.left = null;
-			root.right = null;
-			return root;
-		}
-    
-		if(val <  root.val)
-			root.left = insertIntoBST(root.left,val);
-		else if(val > root.val)
-			root.right = insertIntoBST(root.right,val);
+	List<Long> sum_list = new ArrayList<Long>();
+	List<Integer> count_list = new ArrayList<Integer>();
+	List<Double> result_list = new ArrayList<Double>();
+    public List<Double> averageOfLevels(TreeNode root) {
+		helper(root,0);
 		
-		return root; 
+		for(int i=0;i<count_list.size();i++)
+		{
+			result_list.add(((double)(sum_list.get(i))/count_list.get(i)));
+		}
+		return result_list;
     }
+	
+	private void helper(TreeNode node,int level)
+	{
+		if(sum_list.size() == level)
+		{
+			sum_list.add((long)node.val);	
+			count_list.add(1);
+		}
+		else
+		{
+			sum_list.set(level,sum_list.get(level)+node.val);
+			count_list.set(level,count_list.get(level)+1);
+		}
+		if(node.left != null)
+			helper(node.left,level+1);
+		if(node.right != null)
+			helper(node.right,level +1);
+	}
 }
 ```
 
 
 2.迭代法  
 
-* Runtime: 0 ms, faster than 100.00% of Java online submissions for Insert into a Binary Search Tree.
-* Memory Usage: 50.3 MB, less than 5.17% of Java online submissions for Insert into a Binary Search Tree.
+* Runtime: 5 ms, faster than 11.58% of Java online submissions for Average of Levels in Binary Tree.
+* Memory Usage: 44.7 MB, less than 8.00% of Java online submissions for Average of Levels in Binary Tree.
 
 ```Java
 /**
@@ -91,48 +104,40 @@ class Solution {
  * }
  */
 class Solution {
-    public TreeNode insertIntoBST(TreeNode root, int val) {
-        if(root == null){
-            root = new TreeNode(val);
-            root.left = null;
-            root.right =null;
-            return root;
-        }
-        
-        //用于跟踪现在的位置
-        TreeNode current = root;
-        
-        //可以事先创建好新节点
-        TreeNode node = new TreeNode(val);
-        node.left= null;
-        node.right = null;
-        
-        while(true){
-            if(val < current.val)
-            {
-                if(current.left == null)
-                {
-                    current.left = node;
-                    break;
-                }    
-                else
-                    current = current.left;
-            }
-            else if(val > current.val)
-            {
-                if(current.right == null)
-                {
-                    current.right = node;
-                    break;
-                } 
-                else
-                    current = current.right;
-            }
-        }
-        return root;  
+    public List<Double> averageOfLevels(TreeNode root) {
+		List<Double> list =  new ArrayList<Double>();
+		if(root==null)
+			return list;
+		
+		Queue<TreeNode> queue = new LinkedList<TreeNode>();
+		queue.offer(root);
+		queue.offer(null);
+		long sum =0;
+		int count =0;
+		
+		while(queue.size()>1)
+		{
+			TreeNode top = queue.remove();
+			sum += top.val;
+			count++;
+			
+			if(top.left != null)
+				queue.offer(top.left);
+			if(top.right != null)
+				queue.offer(top.right);
+			
+			if(queue.peek() ==null)
+			{
+				list.add(((double)sum)/count);
+				sum =0;
+				count =0;
+				queue.remove();
+				queue.offer(null);
+			}
+		}
+		return list;   
     }
 }
-
 ```
 
 ##### C++
