--- a/solution/127.Word-Ladder.md
+++ b/solution/127.Word-Ladder.md
@@ -46,7 +46,8 @@ Explanation: The endWord "cog" is not in wordList, therefore no possible transfo
 
 #### 分析
 
-如题目所示，考察二叉搜索树的插入操作，第一时间想到的是递归法和迭代法。（想不明白为什么Memory Usage那么高..）
+这道题要求转换的单词之间只能有1个不同的字母，所以我们可以考虑把相差一个字母的单词当作邻接的顶点，用图的思想来解答。  
+转化成图后，事实上求的是起始顶点和终止顶点之间的最短路径。直观的解法是使用BFS计算层数获得最短路径值。
 
 #### 思路
 略
@@ -55,10 +56,10 @@ Explanation: The endWord "cog" is not in wordList, therefore no possible transfo
 
 ##### JAVA
 
-1.递归法
+1.宽度优先遍历(BFS) *目前的解法效率太低，待优化
 
-* Runtime: 0 ms, faster than 100.00% of Java online submissions for Insert into a Binary Search Tree.
-* Memory Usage: 50.1 MB, less than 5.17% of Java online submissions for Insert into a Binary Search Tree.
+* Runtime: 766 ms, faster than 8.55% of Java online submissions for Word Ladder.
+* Memory Usage: 45.6 MB, less than 13.14% of Java online submissions for Word Ladder.
 
 ```Java
 /**
