--- a/solution/127.Word-Ladder.md
+++ b/solution/127.Word-Ladder.md
@@ -7,15 +7,15 @@
 * Tag：`Graph` `BFS`
 ## 题目描述
 Given two words (beginWord and endWord), and a dictionary's word list, find the length of shortest transformation sequence from beginWord to endWord, such that:  
-  1.Only one letter can be changed at a time.  
-  2.Each transformed word must exist in the word list. Note that beginWord is not a transformed word.  
+1. Only one letter can be changed at a time.  
+2. Each transformed word must exist in the word list. Note that beginWord is not a transformed word.  
 
 Note:  
-Return 0 if there is no such transformation sequence.  
-All words have the same length.  
-All words contain only lowercase alphabetic characters.  
-You may assume no duplicates in the word list.  
-You may assume beginWord and endWord are non-empty and are not the same.  
++ Return 0 if there is no such transformation sequence.  
++ All words have the same length.  
++ All words contain only lowercase alphabetic characters.  
++ You may assume no duplicates in the word list.  
++ You may assume beginWord and endWord are non-empty and are not the same.  
 
 
 Example 1:  
@@ -56,7 +56,7 @@ Explanation: The endWord "cog" is not in wordList, therefore no possible transfo
 
 ##### JAVA
 
-1.宽度优先遍历(BFS) *目前的解法效率太低，待优化
+1.宽度优先遍历(BFS) **目前的解法效率太低，待优化**
 
 * Runtime: 766 ms, faster than 8.55% of Java online submissions for Word Ladder.
 * Memory Usage: 45.6 MB, less than 13.14% of Java online submissions for Word Ladder.
