--- a/solution/127.Word-Ladder.md
+++ b/solution/127.Word-Ladder.md
@@ -46,8 +46,7 @@ Explanation: The endWord "cog" is not in wordList, therefore no possible transfo
 
 #### 分析
 
-这道题要求转换的单词之间只能有1个不同的字母，所以我们可以考虑把相差一个字母的单词当作邻接的顶点，用图的思想来解答。  
-转化成图后，事实上求的是起始顶点和终止顶点之间的最短路径。直观的解法是使用BFS计算层数获得最短路径值。
+这道题要求转换的单词之间只能有1个不同的字母，所以我们可以考虑把相差一个字母的单词当作邻接的顶点，用图的思想来解答。转化成图后，事实上求的是起始顶点和终止顶点之间的最短路径。直观的解法是使用BFS计算层数获得最短路径值。
 
 #### 思路
 略
