--- a/solution/127.Word-Ladder.md
+++ b/solution/127.Word-Ladder.md
@@ -63,95 +63,79 @@ Explanation: The endWord "cog" is not in wordList, therefore no possible transfo
 ```Java
 /**
  * @author RyuuI
- * Definition for a binary tree node.
- * public class TreeNode {
- *     int val;
- *     TreeNode left;
- *     TreeNode right;
- *     TreeNode(int x) { val = x; }
- * }
  */
 class Solution {
-    public TreeNode insertIntoBST(TreeNode root, int val) {
-		//终止条件即为搜索到null的节点，用于存放新的节点。
-    if(root == null)
-		{
-			root = new TreeNode(val);
-			root.left = null;
-			root.right = null;
-			return root;
-		}
-    
-		if(val <  root.val)
-			root.left = insertIntoBST(root.left,val);
-		else if(val > root.val)
-			root.right = insertIntoBST(root.right,val);
-		
-		return root; 
-    }
-}
-```
+    public int ladderLength(String beginWord, String endWord, List<String> wordList) {
 
-
-2.迭代法  
-
-* Runtime: 0 ms, faster than 100.00% of Java online submissions for Insert into a Binary Search Tree.
-* Memory Usage: 50.3 MB, less than 5.17% of Java online submissions for Insert into a Binary Search Tree.
-
-```Java
-/**
- * @author RyuuI
- * Definition for a binary tree node.
- * public class TreeNode {
- *     int val;
- *     TreeNode left;
- *     TreeNode right;
- *     TreeNode(int x) { val = x; }
- * }
- */
-class Solution {
-    public TreeNode insertIntoBST(TreeNode root, int val) {
-        if(root == null){
-            root = new TreeNode(val);
-            root.left = null;
-            root.right =null;
-            return root;
+        LinkedList<Integer> adj[] = new LinkedList[wordList.size()+1];
+        for(int i=0;i<wordList.size()+1;i++){
+            adj[i] = new LinkedList<Integer>();
         }
-        
-        //用于跟踪现在的位置
-        TreeNode current = root;
-        
-        //可以事先创建好新节点
-        TreeNode node = new TreeNode(val);
-        node.left= null;
-        node.right = null;
-        
-        while(true){
-            if(val < current.val)
+
+        boolean[] visited = new boolean[wordList.size()+1];
+        int endWord_index = -1;
+        Queue<Integer> queue = new LinkedList<Integer>();
+
+        for(int i =0;i<wordList.size();i++)
+        {
+            if(wordList.get(i).equals(endWord))
+                endWord_index = i;
+            for(int j =i+1;j<wordList.size();j++)
             {
-                if(current.left == null)
+                if(difference_count(wordList.get(i),wordList.get(j)))
                 {
-                    current.left = node;
-                    break;
-                }    
-                else
-                    current = current.left;
-            }
-            else if(val > current.val)
-            {
-                if(current.right == null)
-                {
-                    current.right = node;
-                    break;
-                } 
-                else
-                    current = current.right;
+                    adj[i].add(j);
+                    adj[j].add(i);
+                }
+                    
             }
         }
-        return root;  
-    }
-}
+        for(int i =0;i<wordList.size();i++){
+            if(difference_count(wordList.get(i),beginWord))
+            {
+                adj[i].add(wordList.size());
+                adj[wordList.size()].add(i);
+            }
+        }
 
+        if(endWord_index == -1)
+            return 0;
+
+        queue.offer(wordList.size());
+        queue.offer(-1);
+        int len =1;
+
+        while(queue.size()>1){
+            int front = queue.poll();
+            if(front == endWord_index)
+                return len;
+            visited[front] = true;
+            for(int index:adj[front])
+            {
+                if(!visited[index]){
+                    queue.offer(index);
+                }
+            }
+            if(queue.peek() == -1){
+                queue.poll();
+                queue.offer(-1);
+                len++;
+            }
+
+        }
+        return 0;    
+    }
+
+    private boolean difference_count(String stringA, String stringB)
+    {
+            int count=0;
+            for(int i =0;i<stringA.length();i++)
+                if(stringA.charAt(i) != stringB.charAt(i))
+                    count++;
+            return count==1;
+    }
+
+}
 ```
 
 ##### C++
