--- a/solution/1267.Count-Servers-that-Communicate.md
+++ b/solution/1267.Count-Servers-that-Communicate.md
@@ -22,7 +22,7 @@ Output: 3
 Explanation: All three servers can communicate with at least one other server.  
 
 ### Example 3:  
-![Image text](https://raw.githubusercontent.com/Ryuui-tkb/LeetCode/master/img/1267_ex3.png) 
+![Image text](https://raw.githubusercontent.com/Ryuui-tkb/LeetCode/master/img/1267_ex3.png)  
 Input: grid = [[1,1,0,0],[0,0,1,0],[0,0,1,0],[0,0,0,1]]  
 Output: 4  
 Explanation: The two servers in the first row can communicate with each other. The two servers in the third column can communicate with each other. The server at right bottom corner can't communicate with any other server.  
@@ -40,10 +40,12 @@ Explanation: The two servers in the first row can communicate with each other. T
 
 #### 分析
 
-如题目所示，考察二叉搜索树的插入操作，第一时间想到的是递归法和迭代法。（想不明白为什么Memory Usage那么高..）
+这题的关键在于将符合条件的结点从1更改为其他值（如1 -> 2），并统计其数量
 
 #### 思路
-略
+这里提供两种解法。
+* 方法1: 将邻接矩阵转化为邻接表，根据每个邻接表的数量判断是否符合条件;
+* 方法2: 直接横向遍历 和纵向遍历矩阵，寻找符合条件的元素
 
 #### 代码
 
@@ -51,19 +53,12 @@ Explanation: The two servers in the first row can communicate with each other. T
 
 1.递归法
 
-* Runtime: 0 ms, faster than 100.00% of Java online submissions for Insert into a Binary Search Tree.
-* Memory Usage: 50.1 MB, less than 5.17% of Java online submissions for Insert into a Binary Search Tree.
+* Runtime: 3 ms, faster than 79.81% of Java online submissions for Count Servers that Communicate.
+* Memory Usage: 44.9 MB, less than 100.00% of Java online submissions for Count Servers that Communicate.
 
 ```Java
 /**
  * @author RyuuI
- * Definition for a binary tree node.
- * public class TreeNode {
- *     int val;
- *     TreeNode left;
- *     TreeNode right;
- *     TreeNode(int x) { val = x; }
- * }
  */
 class Solution {
     public TreeNode insertIntoBST(TreeNode root, int val) {
