--- a/solution/1267.Count-Servers-that-Communicate.md
+++ b/solution/1267.Count-Servers-that-Communicate.md
@@ -44,14 +44,14 @@ Explanation: The two servers in the first row can communicate with each other. T
 
 #### 思路
 这里提供两种解法。
-* 方法1: 将邻接矩阵转化为邻接表，根据每个邻接表的数量判断是否符合条件;
+* 方法1: 将邻接矩阵转化为邻接数组or邻接链表，根据每个邻接表的数量判断是否符合条件;
 * 方法2: 直接横向遍历 和纵向遍历矩阵，寻找符合条件的元素
 
 #### 代码
 
 ##### JAVA
 
-1.递归法
+1.邻接数组/邻接链表法
 
 * Runtime: 3 ms, faster than 79.81% of Java online submissions for Count Servers that Communicate.
 * Memory Usage: 44.9 MB, less than 100.00% of Java online submissions for Count Servers that Communicate.
@@ -61,22 +61,52 @@ Explanation: The two servers in the first row can communicate with each other. T
  * @author RyuuI
  */
 class Solution {
-    public TreeNode insertIntoBST(TreeNode root, int val) {
-		//终止条件即为搜索到null的节点，用于存放新的节点。
-    if(root == null)
-		{
-			root = new TreeNode(val);
-			root.left = null;
-			root.right = null;
-			return root;
-		}
-    
-		if(val <  root.val)
-			root.left = insertIntoBST(root.left,val);
-		else if(val > root.val)
-			root.right = insertIntoBST(root.right,val);
+    public int countServers(int[][] grid) {
+		int row_count = grid.length;
+		int col_count = grid[0].length;
+		int connected_count =0;
 		
-		return root; 
+		//创建横向的邻接数组和纵向的邻接数组
+		ArrayList<Integer> grid_rowlist[] = new ArrayList[row_count];
+		ArrayList<Integer> grid_collist[] = new ArrayList[col_count];
+		for(int i=0;i<row_count;i++){
+			grid_rowlist[i] = new ArrayList<Integer>();
+		}
+		for(int i=0;i<col_count;i++){
+			grid_collist[i] = new ArrayList<Integer>();
+		}
+		
+		//将值等于1的元素加入邻接数组
+		for(int i=0;i<row_count;i++){
+			for(int j =0;j<col_count;j++){
+				if(grid[i][j] ==1){
+					grid_rowlist[i].add(j);
+					grid_collist[j].add(i);					
+				}
+			}
+		}
+		
+		//检查横向的邻接数组，将size>=2的临界数组计入connected_count，并修改元素值
+		for(int i=0;i<row_count;i++){
+			if(grid_rowlist[i].size()>1){
+				connected_count += grid_rowlist[i].size();
+				for(int j:grid_rowlist[i]){
+					grid[i][j] = -1;
+				}				
+			}
+		}
+		
+		//检查纵向的邻接数组，注意只有元素值未修改过的元素才能计入connected_count
+		for(int i =0;i<col_count;i++){
+			if(grid_collist[i].size()>1){
+				for(int j:grid_collist[i]){
+					if(grid[j][i] != -1)
+						connected_count++;
+				}
+			}
+		}
+		return connected_count;
+        
     }
 }
 ```
