--- a/solution/1267.Count-Servers-that-Communicate.md
+++ b/solution/1267.Count-Servers-that-Communicate.md
@@ -112,65 +112,60 @@ class Solution {
 ```
 
 
-2.迭代法  
+2.横向遍历+纵向遍历法
 
-* Runtime: 0 ms, faster than 100.00% of Java online submissions for Insert into a Binary Search Tree.
-* Memory Usage: 50.3 MB, less than 5.17% of Java online submissions for Insert into a Binary Search Tree.
+* Runtime: 2 ms, faster than 99.04% of Java online submissions for Count Servers that Communicate.
+* Memory Usage: 47 MB, less than 100.00% of Java online submissions for Count Servers that Communicate.
 
 ```Java
 /**
  * @author RyuuI
- * Definition for a binary tree node.
- * public class TreeNode {
- *     int val;
- *     TreeNode left;
- *     TreeNode right;
- *     TreeNode(int x) { val = x; }
- * }
  */
 class Solution {
-    public TreeNode insertIntoBST(TreeNode root, int val) {
-        if(root == null){
-            root = new TreeNode(val);
-            root.left = null;
-            root.right =null;
-            return root;
-        }
-        
-        //用于跟踪现在的位置
-        TreeNode current = root;
-        
-        //可以事先创建好新节点
-        TreeNode node = new TreeNode(val);
-        node.left= null;
-        node.right = null;
-        
-        while(true){
-            if(val < current.val)
-            {
-                if(current.left == null)
-                {
-                    current.left = node;
-                    break;
-                }    
-                else
-                    current = current.left;
-            }
-            else if(val > current.val)
-            {
-                if(current.right == null)
-                {
-                    current.right = node;
-                    break;
-                } 
-                else
-                    current = current.right;
-            }
-        }
-        return root;  
+    public int countServers(int[][] grid) {
+		int connected_count =0;
+		
+		//横向遍历，将符合条件的元素值修改
+		for(int i=0;i<grid.length;i++){
+			int k=-1;
+			for(int j=0;j<grid[0].length;j++){
+				if(grid[i][j] >=1){
+					if(k == -1){
+						k =j;
+						continue;
+					}
+					grid[i][k] =2;
+					grid[i][j] =2;
+				}
+			}
+		}
+		
+		//纵向遍历，将符合条件的元素值修改
+		for(int j=0;j<grid[0].length;j++){
+			int k=-1;
+			for(int i=0;i<grid.length;i++){
+				if(grid[i][j] >=1 ){
+					if(k == -1){
+						k =i;
+						continue;
+					}
+					grid[k][j] =2;
+					grid[i][j] =2;
+				}
+			}
+			
+		}
+		
+		//统计修改后的元素数量
+		for(int i=0;i<grid.length;i++){
+			for(int j=0;j<grid[0].length;j++)
+				if(grid[i][j] == 2)
+					connected_count++;
+					
+		}
+		return connected_count;  
     }
 }
-
 ```
 
 ##### C++
