--- a/solution/743.Network-Delay-Time.md
+++ b/solution/743.Network-Delay-Time.md
@@ -27,131 +27,138 @@ Output: 2
 
 #### 分析
 
-这题的关键在于将符合条件的结点从1更改为其他值（如1 -> 2），并统计其数量
+这道题考察的是图的最短路径的求解方法，这里考虑使用Dijkstra算法与Floyd算法求解。
 
 #### 思路
 这里提供两种解法。
-* 方法1: 将邻接矩阵转化为邻接数组or邻接链表，根据每个邻接表的数量判断是否符合条件;
-* 方法2: 直接横向遍历和纵向遍历矩阵，寻找符合条件的元素
+* Dijkstra算法: 比较适用于求解从某个顶点出发的最短路径。
+* Floyd算法: 适用于求解任意两个顶点的最短路径，时间复杂度为O(n^3)，所以如果只需要求解从某顶点出发的最短路径，Dijkstra算法较好。Floyd算法本质上是dp算法。
 
 #### 代码
 
 ##### JAVA
 
-1.邻接数组/邻接链表法
+1.Dijkstra算法
 
-* Runtime: 3 ms, faster than 79.81% of Java online submissions for Count Servers that Communicate.
-* Memory Usage: 44.9 MB, less than 100.00% of Java online submissions for Count Servers that Communicate.
+* Runtime: 6 ms, faster than 97.06% of Java online submissions for Network Delay Time.
+* Memory Usage: 44.2 MB, less than 90.48% of Java online submissions for Network Delay Time.
 
 ```Java
 /**
  * @author RyuuI
  */
 class Solution {
-    public int countServers(int[][] grid) {
-		int row_count = grid.length;
-		int col_count = grid[0].length;
-		int connected_count =0;
-		
-		//创建横向的邻接数组和纵向的邻接数组
-		ArrayList<Integer> grid_rowlist[] = new ArrayList[row_count];
-		ArrayList<Integer> grid_collist[] = new ArrayList[col_count];
-		for(int i=0;i<row_count;i++){
-			grid_rowlist[i] = new ArrayList<Integer>();
+	public int networkDelayTime(int[][] times, int N, int K) {
+		int[][] time_matrix = new int[N+1][N+1];
+		int maxTime = 0;
+
+		//将所有顶点及权重存入矩阵
+		for(int i=1;i<=N;i++){
+			for(int j=1;j<=N;j++){
+				if(i==j)
+					time_matrix[i][j] =0;
+				else
+					time_matrix[i][j] = Integer.MAX_VALUE;
+			}
 		}
-		for(int i=0;i<col_count;i++){
-			grid_collist[i] = new ArrayList<Integer>();
+		for(int i =0;i<times.length;i++){
+			time_matrix[times[i][0]][times[i][1]] = times[i][2];
 		}
-		
-		//将值等于1的元素加入邻接数组
-		for(int i=0;i<row_count;i++){
-			for(int j =0;j<col_count;j++){
-				if(grid[i][j] ==1){
-					grid_rowlist[i].add(j);
-					grid_collist[j].add(i);					
+		//创建顶点K到其他顶点的distanceMap
+		Map<Integer, Integer> distanceMap = new HashMap<Integer, Integer>();
+		//创建accessedSet用于记录顶点是否已经遍历
+		Set<Integer> accessedSet = new HashSet<Integer>();
+
+		//将顶点K直接相连的顶点的权重存入distanceMap
+		for(int i=1;i<=N;i++){
+			distanceMap.put(i,time_matrix[K][i]);
+		}
+		accessedSet.add(K);
+
+		//下面为核心部分，开始遍历所有顶点，更新最短路径
+		for(int i=1;i<=N;i++){
+			int minDistanceFromK = Integer.MAX_VALUE;
+			int minDistanceIndex = -1;
+			for(int j=1;j<=N;j++){
+				if(!accessedSet.contains(j) && distanceMap.get(j) <minDistanceFromK){
+					minDistanceFromK = distanceMap.get(j);
+					minDistanceIndex = j;
+				}
+			}
+			if(minDistanceIndex ==-1)
+				break;
+			accessedSet.add(minDistanceIndex);
+			for(int k=1;k<=N;k++){
+				int weight = time_matrix[minDistanceIndex][k];
+				int preDistance = distanceMap.get(k);
+				if(k != minDistanceIndex && weight != Integer.MAX_VALUE && (minDistanceFromK+ weight< preDistance)){
+					distanceMap.put(k,minDistanceFromK+ weight);
 				}
 			}
 		}
-		
-		//检查横向的邻接数组，将size>=2的临界数组计入connected_count，并修改元素值
-		for(int i=0;i<row_count;i++){
-			if(grid_rowlist[i].size()>1){
-				connected_count += grid_rowlist[i].size();
-				for(int j:grid_rowlist[i]){
-					grid[i][j] = -1;
-				}				
-			}
+
+		for(int key:distanceMap.keySet()){
+			if(key != K && maxTime < distanceMap.get(key))
+				maxTime = distanceMap.get(key);
+			if(maxTime == Integer.MAX_VALUE)
+				return -1;
 		}
-		
-		//检查纵向的邻接数组，注意只有元素值未修改过的元素才能计入connected_count
-		for(int i =0;i<col_count;i++){
-			if(grid_collist[i].size()>1){
-				for(int j:grid_collist[i]){
-					if(grid[j][i] != -1)
-						connected_count++;
-				}
-			}
-		}
-		return connected_count;
-        
-    }
+		return maxTime;
+	}
 }
 ```
 
 
-2.横向遍历+纵向遍历法
+2.Floyd算法
 
-* Runtime: 2 ms, faster than 99.04% of Java online submissions for Count Servers that Communicate.
-* Memory Usage: 47 MB, less than 100.00% of Java online submissions for Count Servers that Communicate.
+* Runtime: 19 ms, faster than 71.15% of Java online submissions for Network Delay Time.
+* Memory Usage: 44.3 MB, less than 90.48% of Java online submissions for Network Delay Time.
 
 ```Java
 /**
  * @author RyuuI
  */
 class Solution {
-    public int countServers(int[][] grid) {
-		int connected_count =0;
-		
-		//横向遍历，将符合条件的元素值修改
-		for(int i=0;i<grid.length;i++){
-			int k=-1;
-			for(int j=0;j<grid[0].length;j++){
-				if(grid[i][j] >=1){
-					if(k == -1){
-						k =j;
-						continue;
-					}
-					grid[i][k] =2;
-					grid[i][j] =2;
-				}
+	public int networkDelayTime(int[][] times, int N, int K) {
+		int[][] time_matrix = new int[N+1][N+1];
+		int maxTime = 0;
+
+		for(int i=1;i<=N;i++){
+			for(int j=1;j<=N;j++){
+				if(i==j)
+					time_matrix[i][j] =0;
+				else
+					time_matrix[i][j] = Integer.MAX_VALUE;
 			}
 		}
-		
-		//纵向遍历，将符合条件的元素值修改
-		for(int j=0;j<grid[0].length;j++){
-			int k=-1;
-			for(int i=0;i<grid.length;i++){
-				if(grid[i][j] >=1 ){
-					if(k == -1){
-						k =i;
-						continue;
-					}
-					grid[k][j] =2;
-					grid[i][j] =2;
+
+		for(int i =0;i<times.length;i++){
+			time_matrix[times[i][0]][times[i][1]] = times[i][2];
+		}
+
+		for(int k=1;k<=N;k++){
+			for(int i=1;i<=N;i++){
+				for(int j=1;j<=N;j++){
+					if(time_matrix[i][k]!= Integer.MAX_VALUE && time_matrix[k][j] != Integer.MAX_VALUE &&((time_matrix[i][k]+time_matrix[k][j])<time_matrix
+						[i][j])){
+						time_matrix[i][j] = time_matrix[i][k] + time_matrix[k][j];
 				}
 			}
-			
+
 		}
-		
-		//统计修改后的元素数量
-		for(int i=0;i<grid.length;i++){
-			for(int j=0;j<grid[0].length;j++)
-				if(grid[i][j] == 2)
-					connected_count++;
-					
+
+	}
+	for(int i=1;i<=N;i++){
+		if(i!=K){
+			System.out.println(time_matrix[K][i]);
+			if(time_matrix[K][i] == Integer.MAX_VALUE)
+				return -1;
+			else if(time_matrix[K][i] > maxTime)
+				maxTime = time_matrix[K][i];
 		}
-		return connected_count;  
-    }
+	}
+	return maxTime;
+}
 }
 ```
 
